--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
     "copy-webpack-plugin": "^1.1.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "node-sass": "^3.4.2",
+    "open-browser-webpack-plugin": "0.0.2",
     "sass-loader": "^3.2.0",
     "webpack-dev-server": "^1.14.1"
   },
