--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --progress --colors",
     "watch": "webpack --progress --colors --watch",
-    "dev": "webpack-dev-server --progress --colors --watch --host 127.0.0.1"
+    "dev": "webpack-dev-server --progress --colors --watch --host 127.0.0.1",
+    "hot-dev": "webpack-dev-server --progress --colors --watch --host 127.0.0.1 --inline --hot"
   },
   "keywords": [],
   "author": "mygoare@gmail.com",
