--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
+    "pubsub-js": "^1.5.3",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "style-loader": "^0.13.0",
@@ -18,6 +19,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "node-sass": "^3.4.2",
     "open-browser-webpack-plugin": "0.0.2",
+    "react-cropperjs": "^1.1.0",
     "sass-loader": "^3.2.0",
     "webpack-dev-server": "^1.14.1"
   },
