--- a/package.json
+++ b/package.json
@@ -6,23 +6,26 @@
   "dependencies": {
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
-    "css-loader": "^0.23.1",
     "pubsub-js": "^1.5.3",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "style-loader": "^0.13.0",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "react-superslider": "^1.0.3",
     "webpack": "^1.12.14"
   },
   "devDependencies": {
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
+    "node-sass": "^3.4.2",
+    "css-loader": "^0.23.1",
+    "style-loader": "^0.13.0",
+    "sass-loader": "^3.2.0",
     "copy-webpack-plugin": "^1.1.1",
     "extract-text-webpack-plugin": "^1.0.1",
-    "node-sass": "^3.4.2",
     "open-browser-webpack-plugin": "0.0.2",
-    "react-cropperjs": "^1.1.0",
-    "sass-loader": "^3.2.0",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "react-cropperjs": "^1.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
