--- a/package.json
+++ b/package.json
@@ -15,17 +15,18 @@
   "devDependencies": {
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
+    "copy-webpack-plugin": "^1.1.1",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "node-sass": "^3.4.2",
-    "css-loader": "^0.23.1",
-    "style-loader": "^0.13.0",
-    "sass-loader": "^3.2.0",
-    "copy-webpack-plugin": "^1.1.1",
-    "extract-text-webpack-plugin": "^1.0.1",
     "open-browser-webpack-plugin": "0.0.2",
-    "webpack-dev-server": "^1.14.1",
-    "react-cropperjs": "^1.1.0"
+    "react-cropperjs": "^1.1.0",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
+    "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
