--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "normalize.css": "^4.2.0",
     "pubsub-js": "^1.5.3",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
