--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "pubsub-js": "^1.5.3",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-router": "^2.6.0",
     "react-superslider": "^1.0.3",
     "webpack": "^1.12.14"
   },
