--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "pubsub-js": "^1.5.3",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-redux": "^4.4.5",
     "react-router": "^2.6.0",
     "react-superslider": "^1.0.3",
+    "redux": "^3.5.2",
     "webpack": "^1.12.14"
   },
   "devDependencies": {
